[tool.poetry]
name = "kiwiaga"
version = "0.1.0"
description = "A CLI tool designed for interact with MangaDex API and show info about manga."
authors = ["febits <febits@proton.me>"]
readme = "README.md"

[tools.poetry.urls]
"Homepage" = "https://pypi.org/project/kiwiaga"
"Source" = "https://github.com/febits/kiwiaga"

[tool.poetry.scripts]
kiwiaga = "kiwiaga.cli:app"

[tool.poetry.dependencies]
python = "^3.12"
typer = "^0.12.3"
rich = "^13.7.1"
humanize = "^4.9.0"
httpx = "^0.27.0"
pytz = "^2024.1"
pyyaml = "^6.0.1"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
isort = "^5.13.2"
pylint = "^3.2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
